--- a/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
+++ b/Zybach.Web/src/app/pages/water-quality-inspection-detail/water-quality-inspection-detail.component.html
@@ -267,13 +267,13 @@
                 </div>
             </div>
         </div>
-        <div class="row float-end mt-3">
-            <a class="btn btn-zybach btn-md float-end me-3"
+        <div class="row float-end mt-3 col-6">
+            <a class="btn btn-zybach btn-md me-3 col-4"
                 routerLink="/water-quality-inspections/{{waterQualityInspection.WaterQualityInspectionID}}/edit">
                 <span class="fas fa-edit"></span> Edit Inspection
             </a>
             
-            <button type="button" class="btn btn-zybach btn-md me-3" [disabled]="isPerformingAction" (click)="launchDeleteInspectionModal(waterQualityInspection.WaterQualityInspectionID)">
+            <button type="button" class="btn btn-zybach btn-md me-3 col-4" [disabled]="isPerformingAction" (click)="launchDeleteInspectionModal(waterQualityInspection.WaterQualityInspectionID)">
                 <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                 <span class="fas fa-trash"></span> Delete Inspection
             </button>
