--- a/Zybach.Web/src/app/shared/components/field-definition/field-definition.component.html
+++ b/Zybach.Web/src/app/shared/components/field-definition/field-definition.component.html
@@ -29,7 +29,7 @@
             <div *ngIf="!showEditButton()" [innerHtml]="fieldDefinition.FieldDefinitionValue"></div>
         </ng-container>
         <div *ngIf="isEditing">
-            <editor #tinyMceEditor [init]="{ toolbar: false, menubar: false, height:200,width:250, plugins: 'quickbars' }"
+            <editor #tinyMceEditor [init]="tinyMceConfig"
                 [(ngModel)]="editedContent">
             </editor>
             
