--- a/Zybach.Web/src/app/pages/farming-practices/farming-practices.component.html
+++ b/Zybach.Web/src/app/pages/farming-practices/farming-practices.component.html
@@ -66,13 +66,11 @@
     </div>
     
 
-    <div class="row">
-        <div class="col-auto ml-auto">
-            <fresca-clear-grid-filters-button class="mr-2" [grid]="irrigationUnitsGrid"></fresca-clear-grid-filters-button>
-            <button class="btn btn-secondary btn-md" style="cursor: pointer;" (click)="downloadCsv()" placement="top" ngbTooltip="Download as CSV">
-                <i class="fas fa-download"></i>
-             </button>
-        </div>
+    <div class="d-flex justify-content-end mt-3">
+        <fresca-clear-grid-filters-button class="mr-2" [grid]="irrigationUnitsGrid"></fresca-clear-grid-filters-button>
+        <button class="btn btn-secondary btn-md" style="cursor: pointer;" (click)="downloadCsv()" placement="top" ngbTooltip="Download as CSV">
+            <i class="fas fa-download"></i>
+            </button>
     </div>
     <ag-grid-angular #irrigationUnitsGrid style="width: 100%; height: 400px;" class="ag-theme-balham mt-2" headerHeight="70"
         [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [gridOptions]="gridOptions"
